--- a/templates/gestione.html
+++ b/templates/gestione.html
@@ -3,11 +3,11 @@
 <title>Gestione</title>
 </head>
 <body>
-Bruh
-	<a href="/">Torna</a>
-	<a href="/">Gestione film</a>
-	<a href="/">Gestione proiezioni</a>
-	<a href="/">Gestione autorizzazioni</a>
-	<a href="/">Statistiche</a>
+Bruh<br>
+	<a href="/">Torna</a><br>
+	<a href="/gestisci_film">Gestione film</a><br>
+	<a href="/gestisci_proiezioni">Gestione proiezioni</a><br>
+	<a href="/autorizzazioni">Gestione autorizzazioni</a><br>
+	<a href="/statistiche">Statistiche</a><br>
 </body>
 </html>
