--- a/templates/gestione_proiezioni.html
+++ b/templates/gestione_proiezioni.html
@@ -85,7 +85,7 @@ table, th, td {
 	<h1>CHIUDI PRENOTAZIONI</h1>
 	Inserisci la chiave della proiezione alla quale interrompere le prenotazioni
 	<br>
-	<form action="/" method="POST">
+	<form action="/chiudi_proiezione" method="POST">
 	<input name="chiave" type="number">
 	<input type="submit" value="Chiudi le prenotazioni"> 
 	</form>
