--- a/templates/gestione.html
+++ b/templates/gestione.html
@@ -5,6 +5,7 @@
 <body>
 Bruh<br>
 	<a href="/">Torna</a><br>
+	<a href="/logout">Logout</a> <br/>
 	<a href="/gestisci_film">Gestione film</a><br>
 	<a href="/gestisci_proiezioni">Gestione proiezioni</a><br>
 	<a href="/autorizzazioni">Gestione autorizzazioni</a><br>
