--- a/templates/gestione_proiezioni.html
+++ b/templates/gestione_proiezioni.html
@@ -101,6 +101,7 @@ table, th, td {
 			<th>Anno Pubblicazionw</th>
 			<th>Regista</th>
 			<th>Genere</th>
+			<th>Prenotabile</th>
 		</tr>
 		{% for proiezione  in proiezioni %}
 		<tr>
@@ -112,6 +113,7 @@ table, th, td {
 			<td> {{ proiezione.10 }} </td>
 			<td> {{ proiezione.11 }} </td>
 			<td> {{ proiezione.12 }} </td>
+			<td> {{ proiezione.4 }} </td>
 		</tr>
 		{% endfor %}
 	</table>
