--- a/templates/registrazione.html
+++ b/templates/registrazione.html
@@ -23,7 +23,7 @@ Inserisci email e password per accedere
 	<br>
 	<label for="itelefono">Telefono:</label>
 	<br>
-	<input type="text" id="itelefono" name="telefono"type="number">
+	<input type="text" id="itelefono" name="telefono"type="Text">
 	<br>
 	
 	<input type="submit" value="Registrami"> 
