--- a/templates/accesso.html
+++ b/templates/accesso.html
@@ -3,6 +3,8 @@
 <title>Accesso</title>
 </head>
 <body>
+	
+	<a href="/">Torna alla home</a><br>
 Inserisci email e password per accedere
 	<form action="/login" method="POST">
 	<input name="email" type="text">
