--- a/templates/gestione.html
+++ b/templates/gestione.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 Bruh<br>
-	<a href="/">Torna</a><br>
+	<a href="/">Torna alla home</a><br>
 	<a href="/logout">Logout</a> <br/>
 	<a href="/gestisci_film">Gestione film</a><br>
 	<a href="/gestisci_proiezioni">Gestione proiezioni</a><br>
