--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@ table, th, td {
 	<h2> benvenuto {{utente.cognome}} {{utente.nome}} </h2>
 	<a href="/logout">Logout</a> <br/>
 	<a href="/personale">Controlla i tuoi dati e le tue prenotazioni</a> <br/>
+	<a href="/prenotabili">Fai una prenotazione</a><br>
 	{% else %}
 	<a href="/accedi">Login</a> <br/>
 	<a href="/registrati">Registrati</a> <br/>
@@ -27,7 +28,7 @@ table, th, td {
 			<th>Sala</th>
 			<th>Film</th>
 			<th>Durata</th>	
-			<th>Anno Pubblicazionw</th>
+			<th>Anno Pubblicazione</th>
 			<th>Regista</th>
 			<th>Genere</th>
 		</tr>
