--- a/templates/personale.html
+++ b/templates/personale.html
@@ -9,6 +9,9 @@ table, th, td {
 </style>
 </head>
 <body>
+	<a href="/">Torna indietro</a><br>
+	<a href="/prenotazioni">Controlla le mie prenotazione</a><br>
+	<a href="/prenotabili">Fai una prenotazione</a><br>
 	<table>
 		<tr>
 			<th>ID</th>
