--- a/templates/registrazione.html
+++ b/templates/registrazione.html
@@ -3,6 +3,8 @@
 <title>Registrazione</title>
 </head>
 <body>
+	
+<a href="/">Torna indietro</a><br>
 Inserisci email e password per accedere
 	<form action="/registrazione" method="POST">
 	<label for="inome">Nome:</label>
