--- a/templates/gestione.html
+++ b/templates/gestione.html
@@ -8,7 +8,9 @@ Bruh<br>
 	<a href="/logout">Logout</a> <br/>
 	<a href="/gestisci_film">Gestione film</a><br>
 	<a href="/gestisci_proiezioni">Gestione proiezioni</a><br>
+	{%if admin%}
 	<a href="/autorizzazioni">Gestione autorizzazioni</a><br>
+	{%endif%}
 	<a href="/statistiche">Statistiche</a><br>
 </body>
 </html>
