--- a/templates/gestione_proiezioni.html
+++ b/templates/gestione_proiezioni.html
@@ -16,15 +16,15 @@ table, th, td {
 	<form action="/aggiungi_proiezione" method="POST">
 	<label for="ianno">Anno:</label>
 	<br>
-	<input type="text" id="ianno" name="anno">
+	<input type="number" id="ianno" name="anno" min="2021" max="2030">
 	<br>
 	<label for="imese">Mese:</label>
 	<br>
-	<input type="text" id="imese" name="mese">
+	<input type="number" id="imese" name="mese" min="1" max="12">
 	<br>
 	<label for="igiorno">Giorno:</label>
 	<br>
-	<input type="text" id="igiorno" name="giorno">
+	<input type="number" id="igiorno" name="giorno" min="1" max="31">
 	<br>
 	<label for="iora">Ora:</label>
 	<br>
@@ -32,15 +32,15 @@ table, th, td {
 	<br>
 	<label for="isala">Sala:</label>
 	<br>
-	<input type="text" id="isala" name="sala">
+	<input type="number" id="isala" name="sala" min="1" max="7">
 	<br>
 	<label for="ifilm">Id film:</label>
 	<br>
-	<input type="text" id="ifilm" name="film">
+	<input type="number" id="ifilm" name="film" min="0">
 	<br>
 	<label for="iprezzo">Prezzo Biglietto:</label>
 	<br>
-	<input type="text" id="ibiglietto" name="biglietto">
+	<input type="number" id="ibiglietto" name="biglietto" min="0">
 	<br>
 	<input type="submit" value="Aggiungi proiezione"> 
 	</form>
